{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 4098,
  "lineage": "e7a927f6-7b12-47fc-18a5-7ca0ab6e92a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b162eb6405b8aee0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-90-53-169.compute-1.amazonaws.com",
            "public_ip": "54.90.53.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "teste_eip_az1_brunocg"
            },
            "tags_all": {
              "Name": "teste_eip_az1_brunocg"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0497d37485c1c553a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-33-184.compute-1.amazonaws.com",
            "public_ip": "44.194.33.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "teste_eip_az2_brunocg"
            },
            "tags_all": {
              "Name": "teste_eip_az2_brunocg"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public_brunocgA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-02809d7bbec34e60a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02809d7bbec34e60a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-brunocg",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bae36b7753e3b3ee",
            "private_dns": "ip-10-0-0-6.ec2.internal",
            "private_ip": "10.0.0.6",
            "public_dns": "ec2-100-24-33-47.compute-1.amazonaws.com",
            "public_ip": "100.24.33.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05dd08168c06c3f55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010ec871571cc383a",
            "tags": {
              "Name": "bastion_host_brunocg"
            },
            "tags_all": {
              "Name": "bastion_host_brunocg"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078e667c7d825251e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_brunocg",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_teste_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-00d5601fd2563669d",
            "id": "igw-00d5601fd2563669d",
            "owner_id": "808485220920",
            "tags": {
              "Name": "igw_teste_brunocg"
            },
            "tags_all": {
              "Name": "igw_teste_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_teste_brunocgA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b162eb6405b8aee0",
            "id": "nat-0e6c6ac2bc1262269",
            "network_interface_id": "eni-07e2c2e813b691b3c",
            "private_ip": "10.0.0.238",
            "public_ip": "54.90.53.169",
            "subnet_id": "subnet-010ec871571cc383a",
            "tags": {
              "Name": "natgwA_brunocg"
            },
            "tags_all": {
              "Name": "natgwA_brunocg"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_az1",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_teste_brunocgC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0497d37485c1c553a",
            "id": "nat-0c7d2b1db365ec91a",
            "network_interface_id": "eni-00ac0c0dc72d1ffcd",
            "private_ip": "10.0.1.167",
            "public_ip": "44.194.33.184",
            "subnet_id": "subnet-0aecf37fc8e5fdec9",
            "tags": {
              "Name": "natgwC_brunocg"
            },
            "tags_all": {
              "Name": "natgwC_brunocg"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip_az2",
            "aws_subnet.public_subnet_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:network-acl/acl-05ff3f03d22c1cabd",
            "egress": [],
            "id": "acl-05ff3f03d22c1cabd",
            "ingress": [],
            "owner_id": "808485220920",
            "subnet_ids": [
              "subnet-010ec871571cc383a",
              "subnet-0aecf37fc8e5fdec9"
            ],
            "tags": {
              "Name": "acl_brunocg"
            },
            "tags_all": {
              "Name": "acl_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "acl_rule_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-277851728",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05ff3f03d22c1cabd",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl_brunocg",
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "acl_rule_egress_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-16606371",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05ff3f03d22c1cabd",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl_brunocg",
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d5601fd2563669d",
            "id": "r-rtb-01756ad8b4a9550701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01756ad8b4a955070",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_teste_brunocg",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-07bc99896648c9262",
            "id": "rtb-07bc99896648c9262",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e6c6ac2bc1262269",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_brunocg"
            },
            "tags_all": {
              "Name": "private_route_table_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip_az1",
            "aws_nat_gateway.natgw_teste_brunocgA",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-01756ad8b4a955070",
            "id": "rtb-01756ad8b4a955070",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route_table_brunocg"
            },
            "tags_all": {
              "Name": "public_route_table_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association_appA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f4b38190f6636b",
            "route_table_id": "rtb-01756ad8b4a955070",
            "subnet_id": "subnet-0142a098c4c49a9a2"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet_app_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association_appC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f3a7942788a6b75",
            "route_table_id": "rtb-01756ad8b4a955070",
            "subnet_id": "subnet-0468b1a2b446019f3"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnet_app_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association_dbA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8b5b385a95ea552",
            "route_table_id": "rtb-07bc99896648c9262",
            "subnet_id": "subnet-072fa90c5a276e240"
          },
          "dependencies": [
            "aws_eip.elastic_ip_az1",
            "aws_nat_gateway.natgw_teste_brunocgA",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_db_A",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association_dbC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556a8d2e7a0d7eb1",
            "route_table_id": "rtb-07bc99896648c9262",
            "subnet_id": "subnet-063e47448a3b06cc6"
          },
          "dependencies": [
            "aws_eip.elastic_ip_az1",
            "aws_nat_gateway.natgw_teste_brunocgA",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_db_C",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_associationA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e84ccc55bec4b6c",
            "route_table_id": "rtb-01756ad8b4a955070",
            "subnet_id": "subnet-010ec871571cc383a"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_A",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_associationC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d6524fc1317795",
            "route_table_id": "rtb-01756ad8b4a955070",
            "subnet_id": "subnet-0aecf37fc8e5fdec9"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_C",
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-078e667c7d825251e",
            "description": "bastion host sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078e667c7d825251e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso NGINX",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso flask",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso node port MYSQL",
                "from_port": 32000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acesso ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_brunocg",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_brunocg"
            },
            "tags_all": {
              "Name": "sg_brunocg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_app_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0142a098c4c49a9a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0142a098c4c49a9a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "private_subnet_app_a_brunocg"
            },
            "tags_all": {
              "Name": "private_subnet_app_a_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_app_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0468b1a2b446019f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0468b1a2b446019f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "private_subnet_app_c_brunocg"
            },
            "tags_all": {
              "Name": "private_subnet_app_c_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_db_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-072fa90c5a276e240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-072fa90c5a276e240",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "private_subnet_db_a_brunocg"
            },
            "tags_all": {
              "Name": "private_subnet_db_a_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_db_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-063e47448a3b06cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-063e47448a3b06cc6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "private_subnet_db_c_brunocg"
            },
            "tags_all": {
              "Name": "private_subnet_db_c_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-010ec871571cc383a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-010ec871571cc383a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "public_subnet_a_brunocg"
            },
            "tags_all": {
              "Name": "public_subnet_a_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0aecf37fc8e5fdec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aecf37fc8e5fdec9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "public_subnet_c_brunocg"
            },
            "tags_all": {
              "Name": "public_subnet_c_brunocg"
            },
            "vpc_id": "vpc-08633bff7663e608d"
          },
          "dependencies": [
            "aws_vpc.vpc_teste_brunocg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_teste_brunocg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-08633bff7663e608d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0c26d0da65124a962",
            "default_route_table_id": "rtb-0bf09096a1e9f0d45",
            "default_security_group_id": "sg-0446995861f876f4f",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08633bff7663e608d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bf09096a1e9f0d45",
            "owner_id": "808485220920",
            "tags": {
              "Name": "vpc_teste_brunocg"
            },
            "tags_all": {
              "Name": "vpc_teste_brunocg"
            }
          }
        }
      ]
    }
  ]
}